--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
+    "@mui/x-data-grid": "^7.27.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.13",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -48,6 +54,7 @@
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "jsdoc": "^4.0.4"
   }
 }
